public interface printable {
    void prints();
}
